--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -4,3 +4,5 @@ Welcome to the Iron Yard Management Site.
 = link_to "Locations", locations_path
 %br
 = link_to "Courses", courses_path
+%br
+= link_to "Assignments", assignments_path
