--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -14,3 +14,7 @@
     - @locations.each do |location|
       = link_to location.city, location_path(location)
       %br
+    %br
+    = link_to "edit", edit_course_path(@course)
+    |
+    = link_to "delete", course_path(@course), method: :delete
