add bt user for submission and assignment. add CRUD for submission

--- a/app/views/assignments/_form.html.haml
+++ b/app/views/assignments/_form.html.haml
@@ -1,5 +1,5 @@
 .list-group-item
-  = form_for @assignment do |f|
+  = form_for [@assignment] do |f|
     = f.label :name
     = f.text_field :name, class: "form-control"
     = f.label :requirements
