add users CRUD. add ability to change admin status on update.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,3 +6,5 @@ Welcome to the Iron Yard Management Site.
 = link_to "Courses", courses_path
 %br
 = link_to "Assignments", assignments_path
+%br
+= link_to "Users Index", users_path
