--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -36,6 +36,24 @@
     %br/
     = f.password_field :current_password, autocomplete: "off"
   .actions
+  %br
+  Select a Location:
+  %br
+  %ul
+    - Location.all.each do |location|
+      %li
+        = location.city
+        %br
+        Select desired courses offered:
+        %br
+        - location.location_courses.each do |location_course|
+          = check_box_tag 'user[location_course_ids][]', location_course.id
+          = location_course.course.name
+        %br
+        %br
+
+
+  %br
     = f.submit "Update"
 %h3 Cancel my account
 %p
