--- a/app/views/assignments/show.html.haml
+++ b/app/views/assignments/show.html.haml
@@ -15,10 +15,12 @@
   = @assignment.requirements
   %br
   %br
-  Submissions:
+  %strong Submissions:
   %br
   - @submissions.each do |submission|
     = link_to submission.name, assignment_submission_path(@assignment, submission)
+    |
+    = submission.user.last_name + ', ' + submission.user.first_name
     %br
   %br
   = link_to "Create HW Submission", new_assignment_submission_path(@assignment)
