add ability filter to all controllers.  begin setting abilities in ability model

--- a/app/views/assignments/show.html.haml
+++ b/app/views/assignments/show.html.haml
@@ -35,6 +35,8 @@
         |
         = comment.user.email
         |
+        = link_to "Edit Comment", edit_comment_assignment_path(comment)
+        |
         = link_to "Delete comment", destroy_comment_assignment_path(comment), method: :delete
     %br
   %br
