--- a/app/views/locations/edit.html.haml
+++ b/app/views/locations/edit.html.haml
@@ -1,6 +1,6 @@
+= render 'locations_jumbotron_show_edit'
+
 .text-center
-  Edit:
-  = @location.city
   %br
   = link_to "Cancel", location_path(@location)
   %br
