--- a/app/views/locations/new.html.haml
+++ b/app/views/locations/new.html.haml
@@ -1,4 +1,5 @@
-Enter New Location Info:
-= link_to "Cancel", locations_path
+= render 'locations_jumbotron_new'
+.text-center
+  = link_to "Cancel", locations_path
 %br
 = render 'form'
