--- a/app/views/assignments/edit.html.haml
+++ b/app/views/assignments/edit.html.haml
@@ -1,7 +1,9 @@
-.col-md-6.col-md-offset-3.text-center
-  %h1 Edit Assignment
+.jumbotron
+  %h1 Assignments
+  %p.lead 
+    =@assignment.name
+.text-center
   %br
   = link_to "cancel", assignment_path(@assignment)
-  %br
   %br
   = render 'form'
