--- a/app/views/assignments/new.html.haml
+++ b/app/views/assignments/new.html.haml
@@ -1,8 +1,7 @@
-.col-md-6.col-md-offset-3.text-center
-  %h3 Create a new assignment:
+.jumbotron
+  %h1 Assignments
+  %p.lead Create a new assignment:
   = link_to "cancel", assignments_path
   %br
-  %br
-  %br
   .row
-  =render 'form'
+=render 'form'
