--- a/app/views/courses/edit.html.haml
+++ b/app/views/courses/edit.html.haml
@@ -1,7 +1,6 @@
-.col-md-6.col-md-offset-3.text-center
-  %h1 Edit Course
+= render 'courses_jumbotron_show_edit'
+.text-center
   %br
   = link_to "cancel", course_path(@course)
-  %br
   %br
 =render 'form'
