--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -1,17 +1,14 @@
-.col-md-6.col-md-offset-3.text-center
-  = link_to "Return to root", root_path
-  |
+= render 'courses_jumbotron_index'
+.text-center
   = link_to "Create a new course", new_course_path
 %br
 %br
 - @courses.each do |course|
-  .col-md-2.list-group-item
-    = link_to course.name, course_path(course)
+  .col-md-3.text-center
+    .list-group-item
+      = link_to course.name, course_path(course)
+      %br
+      = link_to "edit", edit_course_path(course)
+      |
+      = link_to "delete", course_path(course), method: :delete
     %br
-    = link_to "edit", edit_course_path(course)
-    |
-    = link_to "delete", course_path(course), method: :delete
-%br
-.row
-.col.md-6.text-center
-  Locations offered:
