--- a/app/views/courses/new.html.haml
+++ b/app/views/courses/new.html.haml
@@ -1,8 +1,5 @@
-.col-md-6.col-md-offset-3.text-center
-  %h3 Create a new course offering:
+= render 'courses_jumbotron_new'
+.text-center
   = link_to "cancel", courses_path
 %br
-%br
-%br
-.row
 = render 'form'
