--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,20 +1,20 @@
-.col-md-6.col-md-offset-3.text-center
+= render 'courses_jumbotron_show_edit'
+.text-center
   = link_to "Return to courses", courses_path
   %br
-  %br
-  .group-list-item
-    %h3
-      = @course.name
-    %br
-    = @course.description
-    %br
-    %br
-    Course offered at the following location:
-    %br
-    - @locations.each do |location|
-      = link_to location.city, location_path(location)
+  .col-md-6.col-md-offset-3.text-center
+    .row
+      .list-group-item
+        = @course.description
       %br
-    %br
-    = link_to "edit", edit_course_path(@course)
-    |
-    = link_to "delete", course_path(@course), method: :delete
+      .list-group-item
+        Course offered at the following locations:
+        %br
+        %ul.text-left
+          - @locations.each do |location|
+            %li
+              = link_to location.city, location_path(location)
+      %br
+      = link_to "edit", edit_course_path(@course)
+      |
+      = link_to "delete", course_path(@course), method: :delete
