--- a/app/views/links/_form.html.haml
+++ b/app/views/links/_form.html.haml
@@ -1,7 +1,8 @@
-.list-group-item
-  = form_for [@assignment, @submission, @link] do |f|
-    .form-group
-      = f.label :url
-      = f.text_area :url, class: "form-control"
-    .form-group
-      = f.submit "Submit", class: "btn btn-primary"
+.col-md-6.col-md-offset-3
+  .list-group-item
+    = form_for [@assignment, @submission, @link] do |f|
+      .form-group
+        = f.label :url
+        = f.text_area :url, class: "form-control"
+      .form-group
+        = f.submit "Submit", class: "btn btn-primary"
