--- a/app/views/links/edit.html.haml
+++ b/app/views/links/edit.html.haml
@@ -1,7 +1,9 @@
-.col-md-6.col-md-offset-3.text-center
+.jumbotron
   %h1 Edit Link
+  %p.lead
+    = @link.url
+.text-center
   %br
   = link_to "Cancel", assignment_submission_link_path(@assignment, @submission, @link)
-  %br
   %br
   = render 'form'
