--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,10 +1,8 @@
+= render 'locations_jumbotron_show_edit'
 .text-center
   = link_to "Return to Locations", locations_path
   %br
-  .col-md-4.col-md-offset-4.text-center
-    .list-group-item.h3
-      = @location.city
-    %br
+  .col-md-6.col-md-offset-3.text-center
     .row
       .list-group-item  
         Address:
