--- a/app/views/submissions/_form.html.haml
+++ b/app/views/submissions/_form.html.haml
@@ -1,10 +1,11 @@
-.list-group-item
-  = form_for [@assignment, @submission] do |f|
-    .form-group
-      = f.label :name
-      = f.text_field :name, class: "form-control"
-    .form-group
-      = f.label :input
-      = f.text_area :input, class: "form-control"
-    .form-group
-      = f.submit "Submit", class: "btn btn-primary"
+.col-md-6.col-md-offset-3
+  .list-group-item
+    = form_for [@assignment, @submission] do |f|
+      .form-group
+        = f.label :name
+        = f.text_field :name, class: "form-control"
+      .form-group
+        = f.label :input
+        = f.text_area :input, class: "form-control"
+      .form-group
+        = f.submit "Submit", class: "btn btn-primary"
