--- a/app/views/submissions/edit.html.haml
+++ b/app/views/submissions/edit.html.haml
@@ -1,7 +1,9 @@
-.col-md-6.col-md-offset-3.text-center
-  %h1 Edit Submission
+.jumbotron
+  %h1 SUBMISSIONS
+  %p.lead
+    = @submission.name
+.text-center
   %br
   = link_to "Cancel", assignment_submission_path(@assignment, @submission)
-  %br
   %br
   = render 'form'
