--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -1,8 +1,7 @@
-.col-md-6.col-md-offset-3.text-center
-  %h3 Create a new homework submission
+.jumbotron
+  %h1 Submissions
+  %p.lead Create a new homework submission
   = link_to "cancel", assignment_path(@assignment)
   %br
-  %br
-  %br
   .row
-  = render 'form'
+= render 'form'
