--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -1,61 +1,65 @@
-.col-md-6.col-md-offset-3.text-center
+.jumbotron
+  %h1 Submissions
+  %p.lead 
+    =@submission.name
   = link_to "Return to #{@assignment.name}", assignment_path(@assignment)
   %br
-  %br
-  .group-list-item
-  %h3
-    = @submission.name
-  = link_to "Edit HW Submission", edit_assignment_submission_path(@assignment, @submission)
-  |
-  = link_to "Delete HW Submission", assignment_submission_path(@assignment, @submission), method: :delete
-  %br
-  %br
-  Current State:
-  %br
-  =workflow_state_helper(@submission)
-  %br
-  %br
-  - if @submission.workflow_state != "completed"
-    Change State:
-  %br
-  - if @submission.workflow_state == "new"
-    = link_to "Review", review_submission_assignment_submission_path(@assignment, @submission), method: :patch
-  -elsif @submission.workflow_state == "reviewing"
-    = link_to "Complete", complete_submission_assignment_submission_path(@assignment, @submission), method: :patch
-    |
-    = link_to "Incomplete", incomplete_submission_assignment_submission_path(@assignment, @submission), method: :patch
-  -elsif @submission.workflow_state == "incompleted"
-    = link_to "Review", review_submission_assignment_submission_path(@assignment, @submission), method: :patch
-  %br
-  %br
-  %strong Inputs:
-  %br
-  = @submission.input
-  %br
-  %br
-  %strong Links:
-  %br
-  = link_to "Add Link", new_assignment_submission_link_path(@assignment, @submission)
-  %ul
-    - @links.each do |link|
-      %li
-      = link_to link.url, assignment_submission_link_path(@assignment, @submission, link)
-  %br
-  Comments:
-  %br
-  %ul
-    - @comments.each do |comment|
-      %li
-      = comment.content
-      |
-      = comment.user.email
-      |
-      = link_to "Delete_comment", destroy_comment_assignment_submission_path(@submission, comment), method: :delete
-  %br
-  Add Comment:
-  = form_for @comment, url: create_comment_assignment_submission_path(@assignment, @submission) do |f|
-    .form-group
-      = f.label :content
-      = f.text_area :content, class: "form-control"
+  .col-md-6.col-md-offset-3.text-center
+    .row
+      .list-group-item
+        = link_to "Edit HW Submission", edit_assignment_submission_path(@assignment, @submission)
+        |
+        = link_to "Delete HW Submission", assignment_submission_path(@assignment, @submission), method: :delete
+    %br
+    %br
+    .list-group-item
+      Current State:
       %br
-      = f.submit "Submit comment", class: "btn btn-primary"
+      =workflow_state_helper(@submission)
+      %br
+      %br
+      - if @submission.workflow_state != "completed"
+        Change State:
+      %br
+      - if @submission.workflow_state == "new"
+        = link_to "Review", review_submission_assignment_submission_path(@assignment, @submission), method: :patch
+      -elsif @submission.workflow_state == "reviewing"
+        = link_to "Complete", complete_submission_assignment_submission_path(@assignment, @submission), method: :patch
+        |
+        = link_to "Incomplete", incomplete_submission_assignment_submission_path(@assignment, @submission), method: :patch
+      -elsif @submission.workflow_state == "incompleted"
+        = link_to "Review", review_submission_assignment_submission_path(@assignment, @submission), method: :patch
+    %br
+    .list-group-item
+      %strong Inputs:
+      %br
+      = @submission.input
+      %br
+      %br
+      %strong Links:
+      %br
+      = link_to "Add Link", new_assignment_submission_link_path(@assignment, @submission)
+      %ul
+        - @links.each do |link|
+          %li
+          = link_to link.url, assignment_submission_link_path(@assignment, @submission, link)
+    %br
+    .list-group-item
+      Comments:
+      %br
+      %ul
+        - @comments.each do |comment|
+          %li
+          = comment.content
+          |
+          = comment.user.email
+          |
+          = link_to "Delete_comment", destroy_comment_assignment_submission_path(@submission, comment), method: :delete
+      %br
+      Add Comment:
+      = form_for @comment, url: create_comment_assignment_submission_path(@assignment, @submission) do |f|
+        .form-group
+          = f.label :content
+          = f.text_area :content, class: "form-control"
+          %br
+          = f.submit "Submit comment", class: "btn btn-primary"
