--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,9 +1,11 @@
-= link_to "Return to root", root_path
-%h2 Index of Users:
-%br
-%br
-%ul
+.jumbotron
+  %h1 USERS
+  %p.lead IRON YARD USERS
+.text-center
+  %br
+  %br
   - @users.each do |user|
-    %li
-      = link_to user.last_name + ", " + user.first_name, user_path(user)
+    .col-md-3.text-center
+      .list-group-item
+        = link_to user.last_name + ", " + user.first_name, user_path(user)
   %br
