--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,25 +1,26 @@
-.col-md-6.col-md-offset-3.text-center
-  = link_to "Return to users", users_path
-  %br
-  %br
-  
-  .group-list-item
-  %h3
+.jumbotron
+  %h1 USERS
+  %p.lead
     = @user.first_name
     = @user.last_name
-  = link_to "edit user information", edit_user_path(@user)
-  |
-  = link_to "delete user", user_path(@user), method: :delete
   %br
-  %br
-  email:
-  = @user.email
-  %br
-  github:
-  = link_to @user.github_account, "http://www.github.com/#{@user.github_account}", target: "_blank"
-  %br
-  Admin rights?
-  - if @user.admin == true
-    = "yes"
-  - if @user.admin == false
-    = "no"
+  .col-md-6.col-md-offset-3.text-center
+    = link_to "Return to users", users_path
+    %br
+    %br
+    = link_to "edit user information", edit_user_path(@user)
+    |
+    = link_to "delete user", user_path(@user), method: :delete    
+    .list-group-item
+      %br
+      email:
+      = @user.email
+      %br
+      github:
+      = link_to @user.github_account, "http://www.github.com/#{@user.github_account}", target: "_blank"
+      %br
+      Admin rights?
+      - if @user.admin == true
+        = "yes"
+      - if @user.admin == false
+        = "no"
