--- a/app/views/user_mailer/assignment_comment_email.html.haml
+++ b/app/views/user_mailer/assignment_comment_email.html.haml
@@ -1,4 +1,4 @@
-= @user.first_name + @user.last_name 
+= @user.first_name + ' ' + @user.last_name 
 has just posted the following comment:
 %br
 = @comment.content
