--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -54,7 +54,7 @@
           |
           = comment.user.email
           |
-          = link_to "Delete_comment", destroy_comment_assignment_submission_path(@submission, comment), method: :delete
+          = link_to "", destroy_comment_assignment_submission_path(@submission, comment), method: :delete, class: "glyphicon glyphicon-trash"
       %br
       Add Comment:
       = form_for @comment, url: create_comment_assignment_submission_path(@assignment, @submission) do |f|
