--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  * file per style scope.
  *
  *= require bootstrap
- *= require justified-nav
+ *= require jumbotron
  *= require_tree .
  *= require_self
  */
