--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,12 +7,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body.container
-  - if notice
-    .alert.alert-success{ role: "alert"}
-      = notice
-  - if alert
-    .alert.alert-danger{ role: "alert"}
-      = alert
+  
 / Fixed navbar
 %nav.navbar.navbar-inverse.navbar-fixed-top
   .container
@@ -22,46 +17,65 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "#"} Bootstrap theme
+      %a.navbar-brand{:href => "#"} The Iron Yard Management Tool
     #navbar.navbar-collapse.collapse
       %ul.nav.navbar-nav
-        %li.active
-          %a{:href => "#"} Home
-        %li
-          %a{:href => "#about"} About
-        %li
-          %a{:href => "#contact"} Contact
+        %li{class: active_link(root_path)}
+          = link_to "Home", root_path
         %li.dropdown
           %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-            Dropdown
+            Navigate
             %span.caret
           %ul.dropdown-menu{:role => "menu"}
             %li
-              %a{:href => "#"} Action
+              = link_to "Locations", locations_path
             %li
-              %a{:href => "#"} Another action
+              = link_to "Courses", courses_path
             %li
-              %a{:href => "#"} Something else here
-            %li.divider
-            %li.dropdown-header Nav header
-            %li
-              %a{:href => "#"} Separated link
-            %li
-              %a{:href => "#"} One more separated link
-      / /.nav-collapse
+              = link_to "Homework Assignments", assignments_path
+            -if current_user && current_user.admin
+              %li.divider
+              %li.dropdown-header Admin Only
+              %li
+                = link_to "Users", users_path
+          / /.nav-collapse
       %ul.nav.navbar-nav.navbar-right
         - if current_user
-          = link_to "Logout #{current_user.first_name}", destroy_user_session_path, method: :delete
+          %li
+            = link_to "Logout #{current_user.first_name}", destroy_user_session_path, method: :delete
+          %li
+            = link_to "Edit User", edit_user_registration_path
         - else
-          = link_to "Login", new_user_session_path
-
-
+          %li
+            = link_to "Login", new_user_session_path
+          %li
+            = link_to "Register User", new_user_registration_path
 
 / Main jumbotron for a primary marketing message or call to action
+- if notice
+  .alert.alert-success{ role: "alert"}
+  = notice
+- if alert
+  .alert.alert-danger{ role: "alert"}
+  = alert
 .jumbotron
   .container
     .text-center
-      %h1 Welcome to The Iron Yard Management Tool!
-      %p All Iron Yard Locations, Courses, Homework Assignments, Homework Submissions, and User Information is mainted thru this Management Tool.  Please Login.
+      = render 'jumbotron_input'
 .container
   = yield
+  / Site footer
+%footer.footer
+  .container
+    %p.text-muted 
+      %ul
+        %li{class: "inline-footer"} © TIY.MDG_Productions 2014
+        %li{class: "inline-footer center-footer"}
+          %a{:href => "mailto: TIY@madeup.com?subject=Webpage Input", :target => "_blank", class: "glyphicon glyphicon-envelope"} Contact
+
+/ %footer.footer
+/   %p
+/     © TIY.MDG_Productions 2014
+/     %br
+/     %a{:href => "mailto: TIY@madeup.com?subject=Webpage Input", :target => "_blank", class: "glyphicon glyphicon-envelope"} Contact
+/ /container
