--- a/app/assets/stylesheets/mychanges.css
+++ b/app/assets/stylesheets/mychanges.css
@@ -1,3 +1,11 @@
 li{
   list-style-type: none;
 }
+
+.location-courses{
+  background-color: rgb(238, 238, 238);
+}
+
+li.inline-footer{
+  display: inline-block;
+}
